# llm-bedrock-mistral

./: .gitignore  README.md  llm_bedrock_mistral.py  pyproject.toml
test/: test_bedrock_mistral.py
